--- a/note-app/style.css
+++ b/note-app/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 header {
-    color: rgb(129, 30, 187);
+    color: rgb(132, 17, 199);
     padding: 15px;
     text-align: center;
     font-size: 1.5rem;
@@ -31,39 +31,45 @@ header {
 
 .control-header {
     display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: center;
+    width: 100%;
+    height: auto;
     gap: 10px;
 }
 
-.search-note {
+.search-note-input {
     width: 50vw;
     display: flex;
     justify-content: center;
-    padding: 10px;
+    padding: 13px;
     border: 1px solid rgb(200, 200, 200);
     border-radius: 5px;
     
 }
-.search-note:focus {
-    outline: 2px solid rgb(129, 30, 187);
+.search-note-input:focus {
+    outline: 2px solid rgb(132, 17, 199);
 }
 
 .filter-Notes {
-    width: 6vw;
-    padding: 10px;
+    width: 7vw;
+    padding: 12px;
     border: 1px solid rgb(200, 200, 200);
     border-radius: 5px;
-    background-color: rgb(34, 34, 34);
+    background-color: rgb(51, 51, 51);
     color: white
 }
 
 button {
     display: flex;
+    justify-content: center;
+    align-items: center;
     gap: 10px;
-    padding: 10px;
+    padding: 13px;
     border: none;
     border-radius: 5px;
-    background-color: rgb(129, 30, 187);
+    background-color: rgb(132, 17, 199);
     color: white;
     cursor: pointer;
 }
