--- a/note-app/style.css
+++ b/note-app/style.css
@@ -57,8 +57,9 @@ header {
     padding: 12px;
     border: 1px solid rgb(200, 200, 200);
     border-radius: 5px;
-    background-color: rgb(51, 51, 51);
-    color: white
+    background-color: rgb(255, 255, 255);
+    color: rgb(36, 36, 36);
+    font-weight: 600;
 }
 
 button {
@@ -72,6 +73,7 @@ button {
     background-color: rgb(132, 17, 199);
     color: white;
     cursor: pointer;
+    font-weight: 600;
 }
 
 .empty-state {
