--- a/note-app/style.css
+++ b/note-app/style.css
@@ -103,7 +103,7 @@ header {
     z-index: 9999;
     justify-content: center;
     align-items: center;
-    visibility: hidden;
+    visibility: hiddn;
     transition: opacity 0.3s ease;
 }
 
@@ -115,7 +115,7 @@ header {
 .modal {
     background: white;
     padding: 3em 20px;
-    border-radius: 8px;
+    border-radius: 15px;
     width: 400px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -126,7 +126,7 @@ header {
 
 .new-note-head {
     margin-bottom: 1.5em;
-    color: rgb(132, 17, 199);
+    color: #8411c7;
     font-size: 2em;
     font-weight: 700;
 }
@@ -134,7 +134,7 @@ header {
 .form-label {
     display: block;
     font-size: 18px;
-    margin-bottom: 12px;
+    margin-bottom: 14px;
     font-weight: 600;
 }
 
@@ -166,7 +166,7 @@ header {
     margin-top: 2em;
     display: flex;
     justify-content: center;
-    gap: 15px;
+    gap: 10px;
 }
 
 /* .tag-container {
@@ -174,8 +174,8 @@ header {
     display: flex;
 } */
 
-.tag-container span {
-    background-color: #ab38ee4b;
+.tag-container .span1 {
+    background-color: #bf5ef73a;
     display: flex;
     align-items: center;
     color: #8411c7;
@@ -183,6 +183,37 @@ header {
     border-radius: 12em;
     font-size: 0.9rem;
 }
+
+.tag-container .span2 {
+    background-color: #87ffaf52;
+    display: flex;
+    align-items: center;
+    color: #089c3a;
+    padding: 1em 1em;
+    border-radius: 12em;
+    font-size: 0.9rem;
+}
+
+.tag-container .span3 {
+    background-color: #9a67f83a;
+    display: flex;
+    align-items: center;
+    color: #5e0ff0;
+    padding: 1em 1em;
+    border-radius: 12em;
+    font-size: 0.9rem;
+}
+
+.tag-container .span4 {
+    background-color: #f86ca236;
+    display: flex;
+    align-items: center;
+    color: #f00f65;
+    padding: 1em 1em;
+    border-radius: 12em;
+    font-size: 0.9rem;
+}
+
 
 .tag-container svg {
     cursor: pointer;
@@ -195,16 +226,22 @@ header {
 .save-button {
     background-color: rgb(132, 17, 199);
     color: white;
-    padding: 1.2em 3em
+    padding: 1.2em 3em;
+    width: 100%;
+    border: none;
+    border-radius: 6px;
 }
 
 .cancel-button {
     background-color: rgb(200, 200, 200);
     color: rgb(36, 36, 36);
-    padding: 1.2em 3em
+    padding: 1.2em 3em;
+    width: 100%;
+    border: none;
+    border-radius: 6px;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
     body {
         padding: 0 1em;
     }
@@ -227,9 +264,10 @@ header {
 
     .add-note-btn {
         width: ;
+        color: #5e0ff0
     }
 
     .modal {
-        width: 90%;
+        width: 95%;
     }
 }
