--- a/note-app/style.css
+++ b/note-app/style.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    padding: 0 15em
+    padding: 0 20em
 }
 
 ::-webkit-scrollbar{
@@ -36,9 +36,8 @@ header {
 
 .control-header {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
     height: auto;
     gap: 10px;
     border-radius: 10px;
@@ -53,7 +52,7 @@ header {
 }
 
 .search-note-input {
-    flex: 1;
+    width: 77%;
     padding: 13px;
     border: 1px solid rgb(200, 200, 200);
     border-radius: 5px;
@@ -84,7 +83,7 @@ header {
     align-items: center;
     justify-content: center;
     gap: 5px;
-    width: 12em;
+    width: 10em;
     border: none;
     border-radius: 5px;
     align-items: center;
@@ -97,7 +96,6 @@ header {
     text-align: center;
     margin-top: 50px;
     color: hsl(0, 0%, 59%);
-
 }
 
 .modal-overlay {
@@ -112,14 +110,14 @@ header {
     z-index: 9999;
     justify-content: center;
     align-items: center;
-    visibility: hiddn;
-    transition: opacity 0.3s ease;
+    visibility: hidden;
+    transition: all .0s ease;
 }
 
-.modal-overlay.active {
+/* .modal-overlay.active {
     visibility: visible;
     opacity: 1
-}
+} */
 
 .modal {
     background: white;
@@ -274,21 +272,22 @@ header {
         padding: 3em 2em;
     }
 
-    .control-header {
-        flex-direction: row;
+    /* .control-header {
+        display: grid;
+        grid-row: 1fr auto auto;
         gap: 1em;
-    }
+    } */
 
     .search-note-input {
         width: 100%;
     }
 
     .filter-Notes {
-        width: 100%;
+        width: auto;
     }
 
     .add-note-btn {
-        color: #5e0ff0
+        width: 8em;
     }
 
 }
